hphp/hack/test/typecheck/global_const7.php.exp
File "global_const7.php", line 3, characters 11-12:
Expected constant expression for initializer (Parsing[1002])
File "global_const7.php", line 3, characters 11-12:
Illegal constant value (Naming[2023])
